--- a/_posts/2015-10-17-cppcheck-and-clang-format.html
+++ b/_posts/2015-10-17-cppcheck-and-clang-format.html
@@ -101,7 +101,7 @@ make cppcheck
 clang-format -i -style=LLVM /path/to/source/files
 {% endhighlight %}
 
-<p>(Unfortunately it <b>cound not</b> work with directories recursive.)</p>
+<p>(Unfortunately it <b>could not</b> work with directories recursive.)</p>
 
 <ul>
   <li><code>-i</code> enables files auto replace (otherwise the result will be printed to stdout).</li>
