--- a/_posts/2015-10-17-cppcheck-and-clang-format.html
+++ b/_posts/2015-10-17-cppcheck-and-clang-format.html
@@ -3,7 +3,7 @@ category: en
 type: paper
 hastr: true
 layout: paper
-tags: awesome-widgets, development, c++, cmake
+tags: development, c++, cmake
 title: Add cppcheck and clang-format for a cmake project
 short: cppcheck-and-clang-format
 description: A small How-To which describes how to add automatic code style checking and static analyser to a project on <code>C++</code> which uses <code>cmake</code> as a build system.
