--- a/ru/_posts/2015-10-17-cppcheck-and-clang-format.html
+++ b/ru/_posts/2015-10-17-cppcheck-and-clang-format.html
@@ -3,7 +3,7 @@ category: ru
 type: paper
 hastr: true
 layout: paper
-tags: awesome-widgets, development, c++, cmake
+tags: разработка, c++, cmake
 title: Добавляем cppcheck и clang-format для проекта на cmake
 short: cppcheck-and-clang-format
 description: Небольшое How-To посвященное прикручиванию автоматической проверки стиля, а также статического анализатора к проекту на <code>C++</code>, который использует в качестве системы сборки <code>cmake</code>.
