--- a/projects/awesome-widgets.html
+++ b/projects/awesome-widgets.html
@@ -63,7 +63,7 @@ make
 sudo make install
 {% endhighlight %}
 
-  <b>NOTE:</b> on Plasma 5 it very likely require <code>-DKDE_INSTALL_USE_QT_SYS_PATHS=ON</code> flag
+  <b>NOTE:</b> on Plasma 5 it very likely requires <code>-DKDE_INSTALL_USE_QT_SYS_PATHS=ON</code> flag
   </li>
 </ul>
 
@@ -378,12 +378,12 @@ sudo make install
   <tr>
     <td><code>$downkb</code></td>
     <td>Download speed for active device, KB/s, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$downunits</code></td>
     <td>Download speed units for active device, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$downN</code></td>
@@ -393,12 +393,12 @@ sudo make install
   <tr>
     <td><code>$downkbN</code></td>
     <td>Download speed for device N, KB/s, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$downunitsN</code></td>
     <td>Download speed units for device N, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$up</code></td>
@@ -408,12 +408,12 @@ sudo make install
   <tr>
     <td><code>$upkb</code></td>
     <td>Upload speed for active device, KB/s, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$upunits</code></td>
     <td>Upload speed units for active device, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$upN</code></td>
@@ -423,12 +423,12 @@ sudo make install
   <tr>
     <td><code>$upkbN</code></td>
     <td>Upload speed for device N, KB/s, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$upunitsN</code></td>
     <td>Upload speed units for device N, <code>----</code>.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$netdev</code></td>
@@ -460,12 +460,12 @@ sudo make install
   <tr>
     <td><code>$dalbum</code></td>
     <td>Current song album with fixed symbols count shown as a running line.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$salbum</code></td>
     <td>Current song album with fixed symbols count shown with three dots at the end.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$artist</code></td>
@@ -475,12 +475,12 @@ sudo make install
   <tr>
     <td><code>$dartist</code></td>
     <td>Current song artist with fixed symbols count shown as a running line.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$sartist</code></td>
     <td>Current song artist with fixed symbols count shown with three dots at the end.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$duration</code></td>
@@ -500,12 +500,12 @@ sudo make install
   <tr>
     <td><code>$dtitle</code></td>
     <td>Current song title with fixed symbols count shown as a running line.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <td><code>$stitle</code></td>
     <td>Current song title with fixed symbols count shown with three dots at the end.</td>
-    <td>2.4.1</td>
+    <td>3.0.0</td>
   </tr>
   <tr>
     <th rowspan="3">Process</th>
@@ -626,7 +626,7 @@ sudo make install
 </table>
 
 <h4><a href="#lambda" class="anchor" id="lambda"><span class="octicon octicon-link"></span></a>Lambda functions</h4>
-<p>Since version 2.4.1 the main widgets supports lambda functions, which are calculated at runtime. It may be declared by using <code>$&#123;&#123; &#125;&#125;</code> construction:</p>
+<p>Since version 3.0.0 the main widgets supports lambda functions, which are calculated at runtime. It may be declared by using <code>$&#123;&#123; &#125;&#125;</code> construction:</p>
 
 {% highlight javascript %}
 {% raw %}${{{% endraw %}
