change site to new url

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ title: About me
           <a href="//www.archlinux.org/trustedusers/#arcanis" title="TU profile">TU Profile on archlinux.org</a><br>
           <a href="//istina.msu.ru/profile/arcanis" title="Publications">Some of my publications</a><br>
           PGP signature: <a href="//pgp.mit.edu:11371/pks/lookup?op=vindex&fingerprint=on&exact=on&search=0x779CD2942629B7FA04AB8F172E89012331361F01" title="pgp.mit.edu">0x31361F01</a><br>
-          <a href="ftp://repo.arcanis.name/public" title="Keys">Public keys</a>
+          <a href="ftp://repo.arcanis.me/public" title="Keys">Public keys</a>
         </p>
 
         <h2>Contacts</h2>
@@ -45,7 +45,7 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 
 <p>My name is Evgeniy Alekseev. In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="//www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
 
-<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="//en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="//en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.name/" title="ftp">my home server</a>.<br>
+<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="//en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="//en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.me/" title="ftp">my home server</a>.<br>
 <label class="spoiler">
   <input type="checkbox" tabindex="-1">
   <span class="box">
