--- a/ru/index.html
+++ b/ru/index.html
@@ -24,7 +24,7 @@ title: arcanis
           </span>
         </label>
         <p class="view"><a href="/ru/projects/" title="Проекты">Проекты</a><br>
-        <a href="//repo.arcanis.name/" title="Репозиторий">Репозиторий</a><br>
+        <a href="//repo.arcanis.me/" title="Репозиторий">Репозиторий</a><br>
         <p class="view"><a href="/ru/about" title="Обо мне">Обо мне</a></p>
 
         {% include cse.html %}
@@ -35,4 +35,4 @@ title: arcanis
 <p>Добро пожаловать на мою домашнюю страничку, <code>`echo $USERNAME`</code>. Обо мне Вы можете прочитать по <a href="/ru/about" title="Обо мне">ссылке</a>. К сожалению, я не знаю html/php/ruby/прочее (но я знаю Google-фу! По крайней мере, я так думаю), поэтому эта страничка может выглядеть не очень красиво. Но я старался (ну или не совсем). В блоге я буду писать какие-нибудь статьи о науке, программировании, проживании в Archlinux и, может быть, о сопровождении пакетов. Также я создам странички для некоторых из <a href="//github.com/arcan1s" title="GitHub">моих проектов</a>.</p>
 
 <h3><a href="#contact" class="anchor" id="contact"><span class="octicon octicon-link"></span></a>Контакты</h3>
-<p>Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/ru/about" title="Обо мне">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="//github.com/arcan1s/arcanis.name" title="Репозиторий сайта">репозиторий на GitHub</a> и сделать это.</p>
+<p>Если у Вас есть вопрос или что-нибудь еще, Вы можете <a href="/ru/about" title="Обо мне">связаться со мной</a>. Если Вы хотите предложить пул-реквест или сообщить о баге для этих страничек, не стесняйтесь посетить <a href="//github.com/arcan1s/arcanis.me" title="Репозиторий сайта">репозиторий на GitHub</a> и сделать это.</p>
