--- a/_posts/2014-03-06-site-changes.html
+++ b/_posts/2014-03-06-site-changes.html
@@ -10,7 +10,7 @@ description: I decided to change my site. You may find short list of changes bel
 ---
 <h2><a href="#list" class="anchor" id="list"><span class="octicon octicon-link"></span></a>The list of changes:</h2>
 <ul>
-  <li>I rented a <code>arcanis.name</code> domain. Now I have a normal address, as well as all normal people have it. Small description of how to do it. Firstly, you should rent domain and activate DNS editing (it is called <a href="//www.nic.ru/dns/service/dns_hosting/" title="Service page">DNS-master</a> for Ru-center). I pay about $30 in year. Then you should create CNAME file in your repository; this file has line with your domain name. And finally you should create two DNS records for your domain:
+  <li>I rented a <code>arcanis.me</code> domain. Now I have a normal address, as well as all normal people have it. Small description of how to do it. Firstly, you should rent domain and activate DNS editing (it is called <a href="//www.nic.ru/dns/service/dns_hosting/" title="Service page">DNS-master</a> for Ru-center). I pay about $30 in year. Then you should create CNAME file in your repository; this file has line with your domain name. And finally you should create two DNS records for your domain:
 
 {% highlight bash %}
 @    A   192.30.252.153
@@ -31,7 +31,7 @@ domain.name.           912     IN      A       192.30.252.154
 ...
 {% endhighlight %}
   </li>
-  <li>Also I've created <a href="ftp://repo.arcanis.name/repo" title="Repository">my own repo</a>, which will contain some AUR packages that I'm using. Support of both architectures is planned.</li>
+  <li>Also I've created <a href="ftp://repo.arcanis.me/repo" title="Repository">my own repo</a>, which will contain some AUR packages that I'm using. Support of both architectures is planned.</li>
   <li>Since the repo requires ftp protocol, I've changed samba shared folders to ftp. The problem of access has been resolved by using mount options:
 
 {% highlight bash %}
@@ -64,7 +64,7 @@ chroot_local_user=YES
 local_root=/srv/ftp/music
 listen=YES
 {% endhighlight %}
-Now let's add redirection from <code>repo.arcanis.name</code> to the needed IP address. To do this, add the following entry in DNS:
+Now let's add redirection from <code>repo.arcanis.me</code> to the needed IP address. To do this, add the following entry in DNS:
 {% highlight bash %}
 repo   A   89.249.170.38
 {% endhighlight %}
