--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
 
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages. <a href="/authors" title="Authors">Authors</a></small></p>
+        <p><small><a href="/authors" title="Authors">Authors</a></small></p>
       </footer>
     </div>
     <script src="/resources/js/scale.fix.js" type="text/javascript"></script>
