--- a/ru/404.html
+++ b/ru/404.html
@@ -37,7 +37,7 @@
 
       </section>
       <footer>
-        <p><small>Расположено на GitHub Pages. <a href="/ru/authors" title="Авторы">Авторы</a></small></p>
+        <p><small><a href="/ru/authors" title="Авторы">Авторы</a></small></p>
       </footer>
     </div>
     <script src="/resources/js/scale.fix.js" type="text/javascript"></script>
