--- a/ru/_posts/2016-01-09-url-changes.html
+++ b/ru/_posts/2016-01-09-url-changes.html
@@ -6,5 +6,5 @@ layout: paper
 tags: сайт
 title: Изменения URL
 short: url-changes
-description: Хочу заметить, что я изменил адреса сайта и репозитория с <a href="//arcanis.name">arcanis.name</a> на <a href="//arcanis.me">arcanis.me</a>. Изменения были сделаны исключительно потому что ME домен чуть более симпатичнее. Старые адреса пока еще рабочии и будут такими до марта 2016 год (дата регистрации домена), но на текущий момент я настроил переадресацию со старых адресов на новые. Извините за недобства.
+description: Хочу заметить, что я изменил адреса сайта и репозитория с <a href="//arcanis.name">arcanis.name</a> на <a href="//arcanis.me">arcanis.me</a>. Изменения были сделаны исключительно потому что ME домен чуть более симпатичнее. Старые адреса пока еще рабочие и будут такими до марта 2016 год (дата регистрации домена), но на текущий момент я настроил переадресацию со старых адресов на новые. Извините за недобства.
 ---
