change project structure to more pretty one

--- a/ru/projects/index.html
+++ b/ru/projects/index.html
@@ -6,120 +6,25 @@ title: Проекты
 comment: false
 share: true
 back: 1
-groups:
-    - title: Виджеты KDE
-      short: widgets
-      projects:
-          - title: Awesome Widgets
-            short: awesome-widgets
-            description: <code>Awesome Widgets</code> это набор минималистичных плазмоидов, написанных на <code>CPP</code>. Они выглядят, как виджеты в <a href="//awesome.naquadah.org/" title="Домашняя страница Awesome">Awesome WM</a>. Мои плазмоиды хорошо и легко настраиваются и не засоряют Ваш KDE. Также этот пакет имеет дополнительный <a href="//techbase.kde.org/Development/Tutorials/Plasma/DataEngines" title="Мануал для разработчиков">DataEngine</a>, который написан на <code>CPP</code> (старые версии были написаны на <code>Python2</code>).
-            links:
-                - <a href="/ru/projects/awesome-widgets" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/awesome-widgets" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//kde-look.org/content/show.php/Awesome+Widgets?content=157124" title="kde-look">Страница плазмоида на kde-look.org</a>
-                - <a href="//kde-look.org/content/show.php/Extended+Systemmonitor+DataEngine?content=158773" title="kde-look">Страница DataEngine на kde-look.org</a>
-                - <a href="//aur.archlinux.org/packages/kdeplasma-applets-awesome-widgets" title="AUR">Пакет в AUR</a>
-                - <a href="//software.opensuse.org/package/awesome-widgets" title="openSUSE">Пакет для openSUSE</a>
-          - title: Oblikue strategies
-            short: oblikuestrategies
-            description: <code>oblikue-strategies</code> плазмоид, написанный на <code>CPP</code>, который показывает случайные карты из Brian Eno и Peter Schmidt's <a href="//en.wikipedia.org/wiki/Oblique_strategies" title="Wiki">Oblique Strategies</a>. Это форк <a href="//gnome-look.org/content/show.php/Oblique+Strategies?content=78405" title="gnome-look">апплета для GNOME</a> с некоторыми дополнительными фичами.
-            links:
-                - <a href="/ru/projects/oblikuestrategies" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/oblikuestrategies" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//kde-look.org/content/show.php/oblikue-strategies?content=160503" title="kde-look">Страница на kde-look.org</a>
-                - <a href="//aur.archlinux.org/packages/kdeplasma-applets-oblikuestrategies" title="AUR">Пакет в AUR</a>
-          - title: Open on desktop
-            short: openondesktop
-            description: <code>Open on desktop</code> выпадающее меню для <a href="//dolphin.kde.org" title="Домашняя страница Dolphin">Dolhpin</a>. Создает группу в контексстном меню, которое позволяет открыть файл на указанном рабочем столе. Имеет установочный скрипт, который написан на <code>Bash</code>.
-            links:
-                - <a href="//github.com/arcan1s/openondesktop" title="GitHub">Репозиторий на GitHub</a>
-          - title: Kit system monitor
-            short: sysmon
-            description: <code>Kit System Monitor</code> системный и хардварный монитор, основанный на EG Sysmon. Написан на языке, похожем на HTML, для <a href="//netdragon.sourceforge.ne/" title="Домашняя страница SuperKaramba">SuperKaramba</a> и имеет постой установочный скрипт, написанный на <code>Python2</code>. Это мой первый Open Source проект.
-            links:
-                - <a href="//github.com/arcan1s/sysmon" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//kde-look.org/content/show.php/Kit+System+Monitor?content=155246" title="kde-look">Страница на kde-look.org</a>
-    - title: Демоны
-      short: daemons
-      projects:
-          - title: git-etc
-            short: git-etc
-            description: <code>git-etc</code> простой демон, который создает git репозиторий в указанной директории и создает коммит в указанный промежуток времени. Он написан на <code>Bash</code>. Также имеет простой графический интерфейс, написанный на <code>Python2</code> (<code>pyqt4</code>) для работы с созданным репозиторием.
-            links:
-                - <a href="/ru/projects/git-etc" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/git-etc" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//aur.archlinux.org/packages/git-etc" title="AUR">Пакет в AUR</a>
-          - title: queued
-            short: queued
-            description: <code>queued</code> демон для старта задач в очередь вычислений. Написан на <code>Bash</code>, создан как proof-of-concept.
-            links:
-                - <a href="/ru/projects/queued" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/queued" title="GitHub">Репозиторий на GitHub</a>
-    - title: Научные программы
-      short: science
-      projects:
-          - title: Молекулярная динамика
-            short: moldyn
-            description: Они представлены единственный репозиторием. Содержит некоторые программы для анализа молекулярно-динамических траекторий, используя методы статистической механики и некоторые математические (например, теория графов). Обычно, бекенд программы написаны на <code>C</code>, хотя иногда и на <code>Python2</code>. Некоторые из них имеют графический интерфейс, написанный на <code>CPP</code>.
-            links:
-                - <a href="/ru/projects/moldyn" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/moldyn" title="GitHub">Репозиторий на GitHub</a>
-    - title: Утилиты
-      short: utilities
-      projects:
-          - title: extract_pkglist
-            short: extpkg
-            description: <code>extract_pkglist</code> простой скрипт, написанный на <code>Python2</code> для создания списка установленных пакетов в ArchLinux.
-            links:
-                - <a href="//github.com/arcan1s/extract_pkglist" title="GitHub">Репозиторий на GitHub</a>
-          - title: Food GUI
-            short: foodgui
-            description: <code>Food GUI</code> простая программа-калькулятор, использующая собственную базу данных. Написана на <code>Python2</code>. Рассчитывает белки, жиры и углеводы, а также калорийность и гликемический индекс съеденной пищи. Это мой первый проект с графическим интерфейсом и был написан just-for-fun (и для моей бывшей девушки). Также имеет бинарную версию под Win64.
-            links:
-                - <a href="//github.com/arcan1s/food_gui" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//aur.archlinux.org/packages/food_gui" title="AUR">Пакет в AUR</a>
-          - title: julius-actions
-            short: julius-actions
-            description: <code>julius-actions</code> скрипт, написанный на <code>Python2</code> для работы с <a href="//julius.sourceforge.jp/en_index.php" title="Домашняя страница Julius">julius</a>. Был сделан just-for-fun в мое свободное время. Работает нормально, но я им не пользуюсь.
-            links:
-                - <a href="//github.com/arcan1s/julius-actions" title="GitHub">Репозиторий на GitHub</a>
-          - title: Netctl GUI
-            short: netctl-gui
-            description: <code>Netctl GUI</code> графическая оболочка для <code>netctl</code> (набор скриптов для поднятия сети в Arch'е). Написан на <code>C++</code> с использованием библиотеки <code>Qt</code>. На текущим момент умеет работать с профилями, в том числе создавать новые, а также умеет подключаться к WiFi. Также предоставляет виджет и DataEngine для KDE4/KF5.
-            links:
-                - <a href="/ru/projects/netctl-gui" title="Домашняя страница">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/netctl-gui" title="GitHub">Репозиторий на GitHub</a>
-                - <a href="//kde-apps.org/content/show.php?content=164490" title="kde-apps">Страница на kde-apps.org</a>
-                - <a href="//aur.archlinux.org/packages/netctl-gui" title="AUR">Пакет в AUR</a>
-          - title: Report a Bug
-            short: reportabug
-            description: Приложение/библиотека, написанное на Qt, которое позволяет пользователям отправлять багрепорт для проектов, расположенных на GitHub. Оно может работать как через <a href="//github.com" title="GitHub">GitHub</a>, так и через <a href="//gitreports.com" title="GitReports">GitReports</a>.
-            links:
-                - <a href="/ru/projects/reportabug" title="Homepage">Домашняя страница</a>
-                - <a href="//github.com/arcan1s/reportabug" title="GitHub">Репозиторий на GitHub</a>
 ---
   <body>
     <div class="wrapper">
       <header>
         <h1>{{ page.title }}</h1>
         <p class="view">Список некоторых из моих проектов</p>
-        <p class="view">
-          {% for group in page.groups %}
-            <a href="#{{ group.short }}">{{ group.title }}</a><br>
-          {% endfor %}
-        </p>
       </header>
       <section>
 
-{% for group in page.groups %}
-  <h2><a href="#{{ group.short }}" class="anchor" id="{{ group.short }}"><span class="octicon octicon-link"></span></a>{{ group.title }}</a></h2>
-  {% for project in group.projects %}
-    <h3><a href="#{{ project.short }}" class="anchor" id="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h3>
-    <p>{{ project.description }}</p>
+{% for project in site.categories.projects %}
+    {% if project.categories contains 'ru' %}
+    <h2><a href="#{{ project.short }}" class="anchor" id="{{ project.short }}"><span class="octicon octicon-link"></span></a>{{ project.title }}</h2>
+    <p>{{ project.excerpt }}</p>
     <ul>
+        <li><a href="{{ project.url }}" title="Домашняя страница">Домашняя страница</a></li>
+        <li><a href="//github.com/arcan1s/{{ project.short }}" title="GitHub">Репозиторий на GitHub</a></li>
       {% for link in project.links %}
         <li>{{ link }}</li>
       {% endfor %}
     </ul>
-  {% endfor %}
+    {% endif %}
 {% endfor %}
