--- a/ru/about.html
+++ b/ru/about.html
@@ -25,7 +25,7 @@ title: Обо мне
           IRC: <a href="irc://irc.freenode.net/arcan1s" title="Freenode">arcan1s</a><br>
           ICQ: 407-398-235<br>
           Jabber: arcanis (at) jabber (dot) ru<br>
-          E-mail: <a href="mailto:darkarcanis@mail.ru" title="email">darkarcanis (at) mail (dot) ru</a>
+          E-mail: <a href="mailto:i@arcanis.me" title="email">i (at) arcanis (dot) me</a>
         </p>
       </header>
       <section>
