--- a/authors.html
+++ b/authors.html
@@ -13,7 +13,7 @@ title: Authors
       </header>
       <section>
 
-<p>The code and content of this site is licensed under <a href="//people.freebsd.org/~phk" title="Beerware license">Beerware</a> license:</p>
+<p>The code and content of this site is licensed under <a href="//people.freebsd.org/~phk" title="Beerware license">Beerware</a> license unless it is mentioned:</p>
 <blockquote>
   "THE BEER-WARE LICENSE" (Revision 42):<br>
   Evgeniy Alekseev wrote this file. As long as you retain this notice you can do whatever you want with this stuff. If we meet some day, and you think this stuff is worth it, you can buy me a beer in return.
