--- a/about.html
+++ b/about.html
@@ -22,8 +22,7 @@ title: About me
         <p class="view">
           Alias: arcanis/arcan1s<br>
           IRC: <a href="irc://irc.freenode.net/arcan1s" title="Freenode">arcan1s</a><br>
-          ICQ: 407-398-235<br>
-          Jabber: arcanis (at) jabber (dot) ru<br>
+          Telegram: <a href="//t.me/arcanis" title="Telegram">arcanis</a><br>
           E-mail: <a href="mailto:i@arcanis.me" title="email">i (at) arcanis (dot) me</a>
         </p>
       </header>
@@ -36,41 +35,8 @@ GS/CS d-(+) s: a-- C++++ UL+++>$ P L++ E--- W++ N !o !K w- !O M- !V PS+@ PE Y PG
 ------END GEEK CODE BLOCK------
 {% endhighlight %}
 
-<figure class="img">
-  <a href="/resources/screenshots/photo_siicm.png" title="Full size" type="image/png">
-    <img src="/resources/preview/photo_siicm_prev.jpg" alt="Photo">
-  </a>
-  <figcaption>Photo by Grineva O.V.</figcaption>
-</figure>
+<p>My name is Evgeniy Alekseev. In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="//www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University. Usually I work there with something like molecular physics and some of quantum chemistry with some additions.</p>
 
-<p>My name is Evgeniy Alekseev. In the global Internet I have usually nickname <code>arcan1s</code>, but in the Russian segment it is usually <code>arcanis</code>. I'm a graduate of <a href="//www.chem.msu.ru/" title="Department site">the Department of Chemistry</a> Moscow State University and now I'm a PhD student and working in my University. My speciality is a theoretical chemistry (like molecular physics and some of quantum chemistry).</p>
+<p>At leisure I write small applications using different languages like C++, Python and Scala. Also sometimes I listen music, read books and (more often) play video games.</p>
 
-<p>At leisure I write small applications on C, C++ and Python (and some application scripts on Shell). In order not to seem like a bearded nerd sometimes I listen music and read <a href="//en.wikipedia.org/wiki/Robert_Jordan" title="Wiki">Robert Jordan's</a> or <a href="//en.wikipedia.org/wiki/George_R.R._Martin" title="Wiki">George R.R. Martin's</a> books (or other similar). (But my friends tell me that I still look like a bearded nerd.) Music that I usually listen may be found on <a href="ftp://repo.arcanis.me/" title="ftp">my home server</a>.<br>
-<label class="spoiler">
-  <input type="checkbox" tabindex="-1">
-  <span class="box">
-      The connection information
-      <span class="spoilerbody">
-        User is <code>music</code>, password is the same.
-      </span>
-  </span>
-</label>
-</p>
-
-<p>Also I'm an <a href="//www.archlinux.org/" title="Archlinux">Archlinux</a> user (maybe that's why I look like a bearded nerd). And in October 2013 I became an Archlinux Trusted User:</p>
-<blockquote cite="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/">
-  The Trusted User (TU) is a member of the community charged with keeping the AUR in working order. He/she maintains popular packages (communicating with and sending patches upstream as needed), and votes in administrative matters. A TU is elected from active community members by current TUs in a democratic process. TUs are the only members who have a final say in the direction of the AUR.
-</blockquote>
-<p style="text-align:right;">
-  &copy; <a href="//wiki.archlinux.org/index.php/AUR_Trusted_User_Guidelines/" title="ArchWiki">ArchWiki</a>
-</p>
-
-<p>All contact information can be found on the left. Feel free to contact me with any questions. Oh, wait! If you will write me to ICQ or jabber you must correctly answer antispam bot's question first. The question is:</p>
-
-{% highlight c %}
-int i = 1;
-i = ++i + ++i;
-return i;
-{% endhighlight %}
-
-<p>And the correct answer is <code>5</code> (or <code>6</code>, as you wish).</p>
+<p>Also I'm an <a href="//www.archlinux.org/" title="Archlinux">Archlinux</a> user and since October 2013 I became one of Archilinux maintaners.</p>
