--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: arcanis' homepage
           </span>
         </label>
         <p class="view"><a href="/projects/" title="Projects">Projects</a><br>
-        <a href="//repo.arcanis.me/" title="Repository">Repository</a><br>
+        <a href="http://repo.arcanis.me/index.html" title="Repository">Repository</a><br>
         <p class="view"><a href="/about" title="About">About me</a></p>
 
         {% include cse.html %}
